--- a/index.html
+++ b/index.html
@@ -54,6 +54,42 @@
                 </div>
             </div>
         </section>
+        <!-- what I do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laborum amet consequuntur? Eum, aspernatur distinctio!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Numquam, voluptatibus corporis molestiae blanditiis eum quas sapiente modi minima reiciendis vitae labore veritatis cum.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Recusandae labore debitis sunt reiciendis culpa possimus porro autem officiis tempora, amet animi excepturi fuga!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Aperiam sit deleniti, rem quis maiores labore commodi eaque corporis, accusamus, at culpa odit consectetur!</p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume Section Section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-content">
+                <div>
+
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
